--- a/Watches app/david.css
+++ b/Watches app/david.css
@@ -1,15 +1,6 @@
-body { #popupPanel-popup {
-    right: 0 !important;
-    left: auto !important;
+body{
+background:#ccc url(images.jpg) center center fixed no-repeat;
+background-size:cover;
 }
-#popupPanel {
-    width: 200px;
-    border: 1px solid #000;
-    border-right: none;
-    background: rgba(0,0,0,.5);
-    margin: -1px 0;
-}
-#popupPanel .ui-btn {
-    margin: 2em 15px;
-}
-}
+
+#map-page, #map-canvas { width: 100%; height: 100%; padding: 0; }
