--- a/Watches app/david.css
+++ b/Watches app/david.css
@@ -1,6 +1,22 @@
-body{
-background:#ccc url(images.jpg) center center fixed no-repeat;
-background-size:cover;
+body {
+    background: url(imgas.jpg);
+    background-repeat:repeat-y;
+    background-position:center center;
+    background-attachment:scroll;
+    background-size:100% 100%;
+}
+.ui-page {
+    background: transparent;
+}
+.ui-content{
+    background: transparent;
 }
 
 #map-page, #map-canvas { width: 100%; height: 100%; padding: 0; }
+
+.listview{
+    margin-top:1em;
+    margin-left:1em;
+    margin-right:1em;
+    
+}
