--- a/Watches app/david.css
+++ b/Watches app/david.css
@@ -1,15 +1,17 @@
-body {
-    background: url(imgas.jpg);
-    background-repeat:repeat-y;
-    background-position:center center;
-    background-attachment:scroll;
+ul.mrpv_slider li div.image_container { 
+    text-align:center;
+    background-image:url(http://i36.tinypic.com/5feusn.png);
+    background-position:bottom;
+    background-repeat:no-repeat;
+    margin-right:10px;
+    display:inline-block;
+    zoom: 1;
+    *display: inline;
+    height:324px;
+    width:250px;
+
+    /* this is the line you need to add */
     background-size:100% 100%;
-}
-.ui-page {
-    background: transparent;
-}
-.ui-content{
-    background: transparent;
 }
 
 #map-page, #map-canvas { width: 100%; height: 100%; padding: 0; }
