--- a/Watches app/david.css
+++ b/Watches app/david.css
@@ -27,42 +27,33 @@ ul.mrpv_slider li div.image_container {
 text-align:centre;
 }
 
-/* Set the background image sources */
-        #datejust { background-image: url(swipeoyster/imagenesoyster/datejust.jpg); 
-                   width: 100%; height: 100%;}
-		#date { background-image: url(swipeoyster/imagenesoyster/date.jpg); }
-		#date2 { background-image: url(swipeoyster/imagenesoyster/date2.jpg); }
-		#cosmo { background-image: url(swipeoyster/imagenesoyster/cosmo.jpg); }
-		#explorer { background-image: url(swipeoyster/imagenesoyster/explorer.jpg); }
-		#submariner { background-image: url(swipeoyster/imagenesoyster/submariner.jpg); }
-		/* Background settings */
-		.demo-page {
-			background-size: cover;
-			background-position: center center;
-			background-repeat: no-repeat;
-		}
-		/* Transparent footer */
-		.ui-footer {
-			background: none;
-			border: none;
-		}
-		/* The footer won't have a height because there are only two absolute positioned elements in it.
-		So we position the buttons from the bottom. */
-		.control.ui-btn-left, .trivia-btn.ui-btn-right {
-			top: auto;
-			bottom: 7px;
-			margin: 0;
-		}
-		/* Custom styling for the trivia source */
-		small {
-			font-size: .75em;
-			color: #666;
-		}
-		/* Prevent text selection while swiping with mouse */
-		.ui-header, .ui-title, .control .ui-btn, .trivia-btn {
-			-webkit-user-select: none;
-			-moz-user-select: none;
-			-ms-user-select: none;
-			-o-user-select: none;
-			user-select: none;
-		}
+@media (min-width:35em) {
+ 
+  /* wrap on wide viewports once open */
+ 
+  .ui-page-panel-open .ui-panel-content-fixed-toolbar-display-push.ui-panel-content-fixed-toolbar-position-left,
+  .ui-page-panel-open .ui-panel-content-fixed-toolbar-display-reveal.ui-panel-content-fixed-toolbar-position-left,
+  .ui-page-panel-open .ui-panel-content-wrap-display-push.ui-panel-content-wrap-position-left,
+  .ui-page-panel-open .ui-panel-content-wrap-display-reveal.ui-panel-content-wrap-position-left {
+    margin-right: 17em;
+  }
+  .ui-page-panel-open .ui-panel-content-fixed-toolbar-display-push.ui-panel-content-fixed-toolbar-position-right,
+  .ui-page-panel-open .ui-panel-content-fixed-toolbar-display-reveal.ui-panel-content-fixed-toolbar-position-right,
+  .ui-page-panel-open .ui-panel-content-wrap-display-push.ui-panel-content-wrap-position-right,
+  .ui-page-panel-open .ui-panel-content-wrap-display-reveal.ui-panel-content-wrap-position-right {
+    margin-left: 17em;
+  }
+  .ui-page-panel-open .ui-panel-content-fixed-toolbar-display-push,
+  .ui-page-panel-open .ui-panel-content-fixed-toolbar-display-reveal {
+    width: auto;
+  }
+ 
+  /* disable "dismiss" on wide viewports */
+  .ui-panel-dismiss {
+    display: none;
+  }
+  /* same as the above but for panels with display mode "push" only */
+  .ui-panel-dismiss-display-push {
+    display: none;
+  }
+}
